LIST OF CHANGES
---------------

 - drop not_strip_bam_tag option, explicitly disable bam tag stripping in seq_alignment
 - use lowload lsf queue
 - seqchksum_comparator to cope with higher plexing (with a chdir)
 - force HiSeq rapid run V2 flowcells (BCXX suffix) to use P4

release 48.3
 - get informatrion about a spike directly from lims
 - use old bam_alignment.pl, not P4, if omission of alignments requested
 - option (default on) to force analyses to assume phix spike
 - force P4 and so bwa mem for runs with reads > 100bp
 - enable human split for P4 in seq_alignment (using bwa aln, adapter trimming)
 - run old warehouse loader live in order to pick up pool-level information
     that is currently needed in SeqQC
 - gclp-specific function list for archival

release 48.2
 - added update_ml_warehouse
 - removed sf48 from list of staging areas in green room

release 48.1
 - pipeline-specific function lists
 - setting olb or qc_run flags to true results in olb or qc_run function lists used
 - qc_run flag on its own does not cause a change of lims driver
 - unused pipeline flags and options removed
 - for gclp runs, the analysis daemon to pass gclp function list to analysis pipeline

release 48.0
 - if LIMS cached data creation fails, pipeline script fails before submitting jobs:
     removed spider function from function order for both analysis and archival pipelines;
     introduced spider boolean flag that defaults to true;
     spider is run within prepare() method before the functions are executed
 - removed test and live section in configuration files
 - removed configuration for external script names
 - 'PB_cal_bam' analysis pipeline renamed to 'central'

release 47.9.1
 - Fixed split sanity checks

release 47.9
 - analysis daemon patch: ensure runfolder glob expressions are used when finding the runfolder path
 - use samtools1 (rather than samtools1_1) for samtools in archival and P4 pipelines

release 47.8.1